--- a/sentiment1.Rmd
+++ b/sentiment1.Rmd
@@ -26,15 +26,19 @@ novel.lower.v <- tolower(novel.v)
 jane.chap.l <- strsplit(novel.lower.v, "<br>chapter [ivx]+(—conclusion)?<br>")    # split at chapter breaks
 jane.chap.v <- unlist(jane.chap.l)                                  # 1 element per chapter
 
-
+count <- 1
 # Loop over the chapters, split them into words, and sum up the AFINN values for each chapter
-for(i in 1:length(jane.chap.v)) {    
+for(i in 1:length(jane.chap.v)) {   
   chapteri <- jane.chap.v[i]
   chapterlist <- strsplit(chapteri,"\\W")
   chapterv <- unlist(chapterlist)
   baz <- SVF(chapterv)            # sentiment values for every word
-  buz <- baz[which(baz!="NA")]    # but many words aren't in AFINN, so eliminate null values
-  JaneSentimentByChapter[i] = sum(buz)
+  buz <- baz[which(baz!="NA")] # but many words aren't in AFINN, so eliminate null values
+  if(i > 4 & i <10){
+    JaneSentimentByChapter[count] = sum(buz)
+    count <- count+1
+  }
+  
 }
 
 # Create a graph plotting the sentiment totals for each chapter of the novel
